Fix cookie consent not showing up

--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -68,7 +68,6 @@
 }
 
 #cookies-eu-banner {
-  display: none;
   background-color: var(--background-color); 
   color: var(--primary-foreground-color); 
   padding: 10px;
